[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["KhamzinAdel <khamzin.adel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
Pillow = "^9.3.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
psycopg2 = "^2.9.5"
django-allauth = "^0.52.0"
django-simple-captcha = "^0.5.17"
django-debug-toolbar = "^3.8.1"
stripe = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
