[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["KhamzinAdel <khamzin.adel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.4"
Pillow = "^9.3.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
psycopg2 = "^2.9.5"
django-allauth = "^0.52.0"
django-simple-captcha = "^0.5.17"
django-debug-toolbar = "3.6.0"
stripe = "^5.1.0"
django-modeltranslation = "^0.18.9"
django-recaptcha3 = "^0.4.0"
django-adminlte3 = "^0.1.6"
geocoder = "^1.38.1"
celery = "^5.2.7"
redis = "^4.5.1"
flower = "^1.2.0"
python-json-logger = "^2.0.7"
django-redis = "^5.2.0"
django-environ = "^0.10.0"
django-stubs = "^1.15.0"
mypy = "^1.1.1"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
djangorestframework-simplejwt = "4.7.1"
drf-yasg = "^1.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
